--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
-    "message": "linkbrowser",
+    "message": "Slink",
     "description": "The name of the application"
   },
   "appDescription": {
-    "message": "My Chrome Extension",
+    "message": "A Chrome extension by Selesti to help bulk manage collections of URLs",
     "description": "The description of the application"
   }
 }
